# testdatagen

./: .env  .gitignore  Cargo.toml  LICENSE  README.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.vue  style.css
frontend/src/components/: DataGenerator.vue  DataTable.vue  DatasetForm.vue  DatasetManager.vue  FileUpload.vue
frontend/src/types/: index.ts
migrations/: 20251029124315_create_datasets.sql  20251030144500_add_dataset_columns.sql
src/: csv_parser.rs  main.rs  multipart.rs
src/api/handlers/: datasets.rs  extract_headers.rs  generate.rs  health.rs  mod.rs  upload.rs
src/db/: mod.rs  models.rs  operations.rs  test_utils.rs
src/generators/: flexible.rs  mod.rs  smart_generator.rs  user.rs
