[package]
name = "test_data_gen"
version = "0.0.1"
edition = "2024"

[dependencies]
clap = "4.5.48"
csv = "1.3.1"
actix-web = "4.11.0"
actix-multipart = "0.7.2"
actix-cors = "0.7"
serde = {version = "1.0.226", features = ["derive"]}
serde_json = "1.0.145"
rand = "0.9.2"
futures-util = "0.3"
error = "0.1.9"
