[package]
name = "test_data_gen"
version = "0.0.1"
edition = "2024"

[profile.dev]
split-debuginfo = "unpacked"

opt-level = 1

incremental = true

[dependencies]
# Web framework
actix-web = "4.11.0"
actix-cors = "0.7"
actix-multipart = "0.7.2"

# Serialization
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"

# Parsing
csv = "1.3.1"
clap = "4.5.48"

# Random generation
rand = "0.9.2"

# Utilities
dotenvy = "0.15.7"
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"

# SQLite
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "sqlite", "json", "chrono"] }
chrono = { version = "0.4.42", features = ["serde"] }
